new/prusti/tests/pass/parse/forall_fail.stderr
error: expected `(`
  --> $DIR/forall_fail.rs:10:12
   |
10 | #[requires(forall)]
   |            ^^^^^^

error: expected `|`
  --> $DIR/forall_fail.rs:13:18
   |
13 | #[requires(forall())]
   |                  ^^

error: expected `|`
  --> $DIR/forall_fail.rs:16:18
   |
16 | #[requires(forall(|))]
   |                  ^^^

error: expected `&&` or `==>`
  --> $DIR/forall_fail.rs:19:23
   |
19 | #[requires(forall(||) 1+1)]
   |                       ^

error: expected `:`
  --> $DIR/forall_fail.rs:22:21
   |
22 | #[requires(forall(|a, b| true))]
   |                     ^

error: expected `&&` or `==>`
  --> $DIR/forall_fail.rs:25:23
   |
25 | #[requires(forall(||) || forall(||))]
   |                       ^^

error: `triggers` must be an array of tuples containing Rust expressions
  --> $DIR/forall_fail.rs:28:44
   |
28 | #[requires(forall(|| 1+1 == 1+1, triggers=[1]))]
   |                                            ^

error: `triggers` must be an array of tuples containing Rust expressions
  --> $DIR/forall_fail.rs:31:45
   |
31 | #[requires(forall(|| true, triggers=[(1,2), 1]))]
   |                                             ^

error: `triggers` must be an array of tuples containing Rust expressions
  --> $DIR/forall_fail.rs:34:37
   |
34 | #[requires(forall(|| true, triggers=1))]
   |                                     ^

error: aborting due to 9 previous errors

